--- a/src/app/components/metering-devices/metering-devices.component.html
+++ b/src/app/components/metering-devices/metering-devices.component.html
@@ -1,1 +1,30 @@
-<p>metering-devices works!</p>
+<mat-toolbar class="toolbar" color="primary">
+    <span class="toolbar__title">Metering Devices</span>
+    <button class="toolbar__button" mat-icon-button aria-label="Logout button">
+        <mat-icon>logout</mat-icon>
+    </button>
+</mat-toolbar>
+
+<div class="metering-devices">
+    <table class="table metering-devices__table" mat-table [dataSource]="dataSource">
+        <ng-container matColumnDef="id">
+            <th class="table__header-cell" mat-header-cell *matHeaderCellDef>ID</th>
+            <td class="table__data-cell" mat-cell *matCellDef="let element">{{ element.id }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+            <th class="table__header-cell" mat-header-cell *matHeaderCellDef>Name</th>
+            <td class="table__data-cell" mat-cell *matCellDef="let element">{{ element.name }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="last_active">
+            <th class="table__header-cell" mat-header-cell *matHeaderCellDef>Last Active</th>
+            <td class="table__data-cell" mat-cell *matCellDef="let element">{{ element.last_active }}</td>
+        </ng-container>
+
+        <tr class="table__header-row" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr class="table__row" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator class="paginator metering-devices__paginator" [pageSize]="10"></mat-paginator>
+</div>
