--- a/src/app/components/metering-devices-list/metering-devices-list.component.less
+++ b/src/app/components/metering-devices-list/metering-devices-list.component.less
@@ -1,5 +1,8 @@
 .metering-devices-list {
     width: 100%;
+    &_hidden {
+        display: none;
+    }
 }
 
 .table {
@@ -11,5 +14,13 @@
 
     &__row:nth-child(even) {
         background-color: rgba(0,0,0,.04);
+    }
+}
+
+.spinner {
+    margin: 40px auto;
+    
+    &_hidden {
+        display: none;
     }
 }
