--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar" color="primary">
-    <span class="toolbar__title">Metering Devices</span>
-    <button class="toolbar__button" mat-icon-button aria-label="Logout button" (click)="logOut()">
+    <span class="toolbar__title">Список устройств</span>
+    <button class="toolbar__button" mat-icon-button aria-label="Выйти" (click)="logOut()">
         <mat-icon>logout</mat-icon>
     </button>
 </mat-toolbar>
